# ProgramReleaseWorkDirectory

./: PR_DESCRIPTION.md  README.md  index.html
backend/: .env  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/models/: models.py
backend/app/routers/: applications.py  approval_forms.py  approval_routes.py  auth.py  documents.py  folders.py  users.py
backend/app/schemas/: schemas.py
backend/app/services/: database.py  supabase.py
backend/app/utils/: auth.py
backend/frontend/: index.html
backend/frontend/assets/: index-BlV1QnU1.css  index-C7H6Eqtz.js
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  auth-context.tsx
frontend/src/pages/: Applications.tsx  ApprovalForms.tsx  ApprovalRoutes.tsx  Dashboard.tsx  Documents.tsx  Folders.tsx  Login.tsx  Register.tsx
